--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-accessible-accordion": "^2.4.4",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
     "react-sanfona": "^1.2.2"
   },
   "keywords": [
