Add color and typography content

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-react-next": "next",
     "gatsby-plugin-sass": "next",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
