--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.9.0",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-prism": "^4.3.2",
