Update package file

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "dashing",
+  "description": "Style framework for Dash",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "dashing-framework": "^1.12.1",
     "gatsby": "next",
@@ -29,7 +28,6 @@
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -b master -d public"
   },
   "devDependencies": {
     "gatsby": "next",
@@ -40,6 +38,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/samaritanministries/dashby"
   }
 }
