--- a/src/sass/package.json
+++ b/src/sass/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "paragon",
+  "name": "paragon-framework",
   "description": "Style Framework for Samaritan Ministries",
   "version": "1.0.0-beta.1",
+  "main": "index.js",
   "keywords": [
     "paragon",
     "paragon-framework"
@@ -17,6 +18,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/samaritanministries/paragon"
+    "url": "git+https://github.com/samaritanministries/paragon.git"
   }
 }
