--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-react-next": "next",
     "gatsby-plugin-sass": "next",
+    "gatsby-remark-prismjs": "^3.2.0",
+    "gatsby-transformer-remark": "^2.2.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "prismjs": "^1.15.0",
