--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-prism": "^4.3.2",
-    "react-tooltip": "^3.9.2"
+    "react-tippy": "^1.2.3"
   },
   "devDependencies": {
     "prettier": "^1.12.0",
