--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "deploy": "gatsby build && gh-pages -d public"
   },
   "dependencies": {
-    "gatsby": "^2.0.0",
+    "@tippy.js/react": "^2.0.2",
+    "gatsby": "^2.1.12",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-manifest": "^2.0.17",
+    "gatsby-plugin-manifest": "^2.0.18",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-remark-prismjs": "^3.2.0",
-    "gatsby-transformer-remark": "^2.2.0",
+    "gatsby-transformer-remark": "^2.2.5",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "prismjs": "^1.15.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
     "react-prism": "^4.3.2",
-    "react-tippy": "^1.2.3"
+    "tippy.js": "^4.0.2"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.0",
     "prettier": "^1.12.0",
     "sass-loader": "^7.0.3",
-    "webpack": "^4.12.0",
-    "gh-pages": "^2.0.0"
+    "webpack": "^4.29.5"
   },
   "files": [
     "src/sass/base",
