--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "deploy": "gatsby build && gh-pages -d public"
+    "deploy": "gatsby build && gh-pages -d public",
+    "stylelint": "stylelint '**/*.scss'",
+    "stylelint --fix": "stylelint '**/*.scss' --fix"
   },
   "dependencies": {
     "@tippy.js/react": "^2.1.1",
@@ -30,6 +32,8 @@
     "gh-pages": "^2.0.0",
     "prettier": "^1.12.0",
     "sass-loader": "^7.0.3",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0",
     "webpack": "^4.29.6"
   },
   "files": [
