--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format": "prettier --write 'src/**/*.js'",
     "deploy": "gatsby build && gh-pages -d public",
     "stylelint": "stylelint '**/*.scss'",
-    "stylelint --fix": "stylelint '**/*.scss' --fix"
+    "stylelint-fix": "stylelint '**/*.scss' --fix"
   },
   "dependencies": {
     "@tippy.js/react": "^2.1.1",
@@ -26,6 +26,7 @@
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
     "react-prism": "^4.3.2",
+    "stylelint-scss": "^3.6.0",
     "tippy.js": "^4.0.3"
   },
   "devDependencies": {
