--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,19 +1,23 @@
 {
-  "extends": "stylelint-config-standard",
   "ignoreFiles": [
     "src/sass/example-page/**",
     "src/sass/vendor/**"
   ],
   "plugins": [
-    "stylelint-scss"
+    "stylelint-scss",
+    "stylelint-selector-bem-pattern"
   ],
   "rules": {
+    "plugin/selector-bem-pattern": {
+      "preset": "bem"
+    },
     "at-rule-name-case": "lower",
     "at-rule-name-space-after": "always-single-line",
     "at-rule-semicolon-newline-after": "always",
     "at-rule-no-unknown": null,
     "at-rule-empty-line-before": [ "always", {
       except: ["after-same-name", "inside-block"],
+      ignore: ["after-comment"],
     } ],
     "scss/at-rule-no-unknown": true,
     "block-closing-brace-empty-line-before": "never",
@@ -29,7 +33,7 @@
     "declaration-bang-space-before": "always",
     "indentation": "tab",
     "declaration-block-no-duplicate-properties": true,
-    "max-nesting-depth": 2,
+    "max-nesting-depth": 3,
     "number-no-trailing-zeros": true,
     "property-case": "lower",
     "selector-attribute-brackets-space-inside": "never",
@@ -38,7 +42,6 @@
     "unit-case": "lower",
     "no-invalid-double-slash-comments": true,
     "color-no-invalid-hex": true,
-    "function-calc-no-invalid": true,
     "function-calc-no-unspaced-operator": true,
     "unit-no-unknown": true,
     "property-no-unknown": [ true, {
