Use SASS guidelines config

--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,51 +1,16 @@
 {
+  "extends": "stylelint-config-sass-guidelines",
   "ignoreFiles": [
     "src/sass/example-page/**",
     "src/sass/vendor/**"
   ],
   "plugins": [
-    "stylelint-scss",
-    "stylelint-selector-bem-pattern"
+    "stylelint-scss"
   ],
+  "defaultSeverity": "warning",
   "rules": {
-    "plugin/selector-bem-pattern": {
-      "preset": "bem"
-    },
-    "at-rule-name-case": "lower",
-    "at-rule-name-space-after": "always-single-line",
-    "at-rule-semicolon-newline-after": "always",
-    "at-rule-no-unknown": null,
-    "at-rule-empty-line-before": [ "always", {
-      except: ["after-same-name", "inside-block"],
-      ignore: ["after-comment"],
-    } ],
-    "scss/at-rule-no-unknown": true,
-    "block-closing-brace-empty-line-before": "never",
-    "block-closing-brace-newline-after": "always",
-    "block-opening-brace-space-before": "always",
-    "block-no-empty": true,
-    "comment-empty-line-before": [ "always", {
-      except: ["first-nested"],
-      ignore: ["stylelint-commands"],
-    } ],
-    "comment-whitespace-inside": "always",
-    "declaration-bang-space-after": "never",
-    "declaration-bang-space-before": "always",
-    "indentation": "tab",
-    "declaration-block-no-duplicate-properties": true,
     "max-nesting-depth": 3,
-    "number-no-trailing-zeros": true,
-    "property-case": "lower",
-    "selector-attribute-brackets-space-inside": "never",
-    "selector-pseudo-element-colon-notation": "double",
-    "shorthand-property-no-redundant-values": true,
-    "unit-case": "lower",
-    "no-invalid-double-slash-comments": true,
-    "color-no-invalid-hex": true,
-    "function-calc-no-unspaced-operator": true,
-    "unit-no-unknown": true,
-    "property-no-unknown": [ true, {
-      checkPrefixed: true,
-    } ],
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
   }
 }
