--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^16.8.2",
     "react-helmet": "^5.2.0",
     "react-prism": "^4.3.2",
+    "stylelint-config-sass-guidelines": "^6.0.0",
     "stylelint-scss": "^3.6.0",
+    "stylelint-selector-bem-pattern": "^2.1.0",
     "tippy.js": "^4.0.3"
   },
   "devDependencies": {
