Add indentation as tabs

--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -9,18 +9,20 @@
   ],
   "defaultSeverity": "warning",
   "rules": {
+    "indentation": "tab",
     "max-nesting-depth": 3,
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
-    ##### Rules to fix at a later point #####
+    ### Rules to fix at a later point ###
     "scss/at-extend-no-missing-placeholder": null,
     "selector-class-pattern": null,
-    # Vendor Prefixes #
+    ### Vendor Prefixes ###
     "property-no-vendor-prefix": null,
     "at-rule-no-vendor-prefix": null,
     "value-no-vendor-prefix": null,
-    #
+    ###
     "selector-no-qualifying-type": null,
-    "function-calc-no-unspaced-operator": true
+    "function-calc-no-unspaced-operator": true,
+    "unit-no-unknown": true
   }
 }
