--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-transformer-remark": "^2.3.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "node-sass": "^4.9.0",
     "prismjs": "^1.15.0",
     "react": "^16.8.0",
@@ -30,6 +30,9 @@
     "gh-pages": "^2.0.0",
     "prettier": "^1.12.0",
     "sass-loader": "^7.0.3",
+    "stylelint": "^12.0.0",
+    "stylelint-config-recommended-scss": "^4.1.0",
+    "stylelint-scss": "^3.13.0",
     "webpack": "^4.29.6"
   },
   "files": [
