--- a/package.json
+++ b/package.json
@@ -4,32 +4,38 @@
   "version": "1.0.0",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "start": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "deploy": "gatsby build && gh-pages -d public"
+    "deploy": "gatsby build && gh-pages -d public",
+    "stylelint": "stylelint 'src/sass/**/*.scss'",
+    "stylelint-fix": "stylelint 'src/sass/**/*.scss' --fix"
   },
+  "pre-commit": "stylelint",
   "dependencies": {
     "@tippy.js/react": "^2.1.1",
-    "gatsby": "^2.1.19",
+    "gatsby": "^2.19.45",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-remark-prismjs": "^3.2.0",
+    "gatsby-plugin-sass": "^2.1.26",
+    "gatsby-remark-prismjs": "^3.3.28",
     "gatsby-transformer-remark": "^2.3.0",
     "jquery": "^3.4.1",
-    "node-sass": "^4.9.0",
-    "prismjs": "^1.15.0",
+    "node-sass": "^4.13.0",
+    "pre-commit": "^1.2.2",
+    "prismjs": "^1.17.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.2",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
     "react-prism": "^4.3.2",
+    "stylelint-config-sass-guidelines": "^6.2.0",
     "tippy.js": "^4.0.3"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.0",
-    "prettier": "^1.12.0",
-    "sass-loader": "^7.0.3",
+    "gh-pages": "^2.1.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^7.3.1",
+    "stylelint": "^12.0.1",
     "webpack": "^4.29.6"
   },
   "files": [
