--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "format": "prettier --write 'src/**/*.js'",
     "deploy": "gatsby build && gh-pages -d public",
     "stylelint": "stylelint 'src/sass/**/*.scss'",
-    "stylelint-fix": "stylelint 'src/sass/**/*.scss' --fix"
+    "stylelint-fix": "stylelint 'src/sass/**/*.scss' --fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "pre-commit": "stylelint",
   "dependencies": {
     "@tippy.js/react": "^2.1.1",
     "gatsby": "^2.19.45",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-manifest": "^2.0.20",
+    "gatsby-plugin-manifest": "^2.3.2",
     "gatsby-plugin-react-helmet": "^3.0.7",
     "gatsby-plugin-sass": "^2.1.26",
     "gatsby-remark-prismjs": "^3.3.28",
     "gatsby-transformer-remark": "^2.3.0",
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.0",
     "pre-commit": "^1.2.2",
     "prismjs": "^1.17.1",
     "react": "^16.8.0",
@@ -32,11 +33,21 @@
     "tippy.js": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-knobs": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addon-storysource": "^5.3.17",
+    "@storybook/addon-viewport": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/react": "^5.3.17",
+    "babel-loader": "^8.1.0",
     "gh-pages": "^2.1.1",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "sass-loader": "^7.3.1",
     "stylelint": "^12.0.1",
-    "webpack": "^4.29.6"
+    "webpack": "^4.42.1"
   },
   "files": [
     "src/sass/base",
