--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,7 @@
   "rules": {
     "indentation": "tab",
     "unit-no-unknown": true,
+    "length-zero-no-unit": null,
     # Rules to fix #
     "scss/at-extend-no-missing-placeholder": null,
     "max-nesting-depth": 7, # This should be 3
