Add classnames. Add LoadingTable component

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "pre-commit": "stylelint",
   "dependencies": {
     "@tippy.js/react": "^2.1.1",
+    "classnames": "^2.2.6",
     "gatsby": "^2.19.45",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^2.0.20",
