refactor - work in progress

--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
   },
   "pre-commit": "stylelint",
   "dependencies": {
-    "@tippyjs/react": "^4.0.2",
+    "@tippyjs/react": "^4.2.0",
     "classnames": "^2.2.6",
-    "gatsby": "^2.31.1",
+    "gatsby": "^2.32.2",
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-manifest": "^2.0.20",
-    "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sass": "^2.1.26",
-    "gatsby-remark-prismjs": "^3.3.28",
-    "gatsby-transformer-remark": "^2.3.0",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-remark-prismjs": "^3.13.0",
+    "gatsby-transformer-remark": "^2.16.0",
     "jquery": "^3.5.1",
-    "node-sass": "^4.13.0",
     "pre-commit": "^1.2.2",
-    "prismjs": "^1.17.1",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.2",
+    "prismjs": "^1.23.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "react-prism": "^4.3.2",
+    "sass": "^1.32.6",
     "stylelint-config-sass-guidelines": "^6.2.0",
-    "tippy.js": "^6.2.3"
+    "tippy.js": "^6.2.7"
   },
   "devDependencies": {
     "gh-pages": "^2.1.1",
     "prettier": "^1.19.1",
     "sass-loader": "^7.3.1",
     "stylelint": "^12.0.1",
-    "webpack": "^4.29.6"
+    "webpack": "^4.46.0"
   },
   "files": [
     "src/sass/base",
